--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recompose": "^0.30.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/recompose": "^0.30.7"
   }
 }
